[gd_scene load_steps=15 format=2]

[ext_resource path="res://Actors/Enemies/Boss/Enemy_Boss.gd" type="Script" id=1]
[ext_resource path="res://Sounds/enemy_attack.wav" type="AudioStream" id=2]
[ext_resource path="res://Graphic/old_sprites.png" type="Texture" id=3]
[ext_resource path="res://Global/Health/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Global/Health/Enemy_health.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Enemies/AI/AI.gd" type="Script" id=6]
[ext_resource path="res://Graphic/3 fireballs.png" type="Texture" id=7]
[ext_resource path="res://Global/Bullet/Bullet.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0469

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.7336, 16.7295 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.9513, 16.6888 )

[sub_resource type="CircleShape2D" id=4]
radius = 39.6085

[sub_resource type="CircleShape2D" id=5]
radius = 22272.1

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.8056, 32.9308 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
Bullet = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.57079
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 220, 170, 270, 200 )

[node name="FireBalls" type="Area2D" parent="."]
scale = Vector2( 1.5, 1.5 )

[node name="Fireballs" type="Sprite" parent="FireBalls"]
z_index = 1
texture = ExtResource( 7 )

[node name="Fireball1" type="CollisionShape2D" parent="FireBalls"]
position = Vector2( -1.5874, -157.946 )
shape = SubResource( 1 )

[node name="Fireball2" type="CollisionShape2D" parent="FireBalls"]
position = Vector2( 180.17, 156.359 )
shape = SubResource( 1 )

[node name="Fireball3" type="CollisionShape2D" parent="FireBalls"]
position = Vector2( -184.138, 154.772 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 10.1514, 53.954 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 6.74242, -50.8567 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -21.4074, 2.91714 )
shape = SubResource( 4 )

[node name="Health" parent="." instance=ExtResource( 4 )]
health = 200

[node name="Enemy_health" parent="." instance=ExtResource( 5 )]

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource( 5 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 40.775, 0 )
shape = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 60, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 65, 0 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="FireBalls" to="." method="_on_FireBalls_body_entered"]
[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
